--- a/anemone_coffee/index.html
+++ b/anemone_coffee/index.html
@@ -2,8 +2,11 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logos/LogoAnemone_noir.png" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="icon" type="image/png" href="/logos/logotasse_sanstextev1.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="/logos/logotasse_sanstextev1.png" sizes="16x16" />
+    <link rel="icon" type="image/svg+xml" href="/logos/logotasse_sanstextev1.svg" />
+    <link rel="shortcut icon" href="/logos/logotasse_sanstextev1.ico" />
+     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
