--- a/anemone_coffee/index.html
+++ b/anemone_coffee/index.html
@@ -2,14 +2,40 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
+    <meta property="og:title" content="Anémone Café - Restaurant et Café de Spécialité" />
+    <meta property="og:description" content="Découvrez notre restaurant chaleureux proposant brunchs, café de spécialité et plats à partager." />
+    <meta property="twitter:title" content="Anémone Café - Restaurant et Café de Spécialité" />
+    <meta property="twitter:description" content="Profitez d'un restaurant cosy avec des plats gourmands et du café de qualité." />
+
     <link rel="icon" type="image/png" href="/logos/logotasse_sanstextev1.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="/logos/logotasse_sanstextev1.png" sizes="16x16" />
     <link rel="icon" type="image/svg+xml" href="/logos/logotasse_sanstextev1.svg" />
     <link rel="shortcut icon" href="/logos/logotasse_sanstextev1.ico" />
-     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Café de spécialité, brunchs gourmands et petits plats à partager ☕ 
+    Ambiance cosy, familiale & vintage ✨">
+    <meta name="google-site-verification" content="aCxWvIycNnMJq20smZue2scqrVnI_nTM6RaGKqS3S-w" />    
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Restaurant",
+        "name": "Anémone Café",
+        "url": "https://www.anemonecafe.fr/",
+        "address": {
+          "@type": "Saint-Leu-la-Forêt, Val d'Oise",
+          "streetAddress": "68 rue du Général Leclerc",
+          "addressLocality": "Val d'Oise",
+          "addressRegion": "Île-de-France",
+          "addressCountry": "FR"
+        },
+        "servesCuisine": "Brunch, Café, Restaurant, Plats",
+        "telephone": "+33 1 34 18 43 99"
+      }
+      </script>
+      
     <title>Anémone Café</title>
   </head>
   <body>
