--- a/anemone_coffee/index.html
+++ b/anemone_coffee/index.html
@@ -19,22 +19,26 @@
     Ambiance cosy, familiale & vintage ✨">
     <meta name="google-site-verification" content="aCxWvIycNnMJq20smZue2scqrVnI_nTM6RaGKqS3S-w" />    
     <script type="application/ld+json">
-      {
-        "@context": "https://schema.org",
-        "@type": "Restaurant",
-        "name": "Anémone Café",
-        "url": "https://www.anemonecafe.fr/",
-        "address": {
-          "@type": "Saint-Leu-la-Forêt, Val d'Oise",
-          "streetAddress": "68 rue du Général Leclerc",
-          "addressLocality": "Val d'Oise",
-          "addressRegion": "Île-de-France",
-          "addressCountry": "FR"
-        },
-        "servesCuisine": "Brunch, Café, Restaurant, Plats",
-        "telephone": "+33 1 34 18 43 99"
-      }
-      </script>
+{
+  "@context": "https://schema.org",
+  "@type": "Restaurant",
+  "name": "Anémone Café",
+  "url": "https://www.anemonecafe.fr/",
+  "logo": "https://www.anemonecafe.fr/logos/logotasse_sanstextev1.png",
+  "image": "https://www.anemonecafe.fr/logos/logotasse_sanstextev1.png",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "68 rue du Général Leclerc",
+    "addressLocality": "Saint-Leu-la-Forêt",
+    "postalCode": "95320",
+    "addressRegion": "Île-de-France",
+    "addressCountry": "FR"
+  },
+  "servesCuisine": ["Brunch", "Café de spécialité" ],
+  "telephone": "+33 1 34 18 43 99"
+}
+</script>
+
       
     <title>Anémone Café</title>
   </head>
